flink-stream-bench: okay's streams against Apache Flink on the Wrocław timetable
okay-flink carried one function and no number: `toFlink` claims an okay
Aggregator IS a Flink AggregateFunction, and nothing had run it under a
real engine. This is that run, and the claim is what makes the
comparison fair — Job.stats is ONE value, folded by Chunks in one lane
and accumulated/merged/presented by Flink's window operator in the
other, so the difference between the two numbers is the engine.

1.16M GTFS stop-times become an event-time stream deterministically
(splitmix delay, arrival jitter under the watermark bound so nothing is
ever late), and five stages run twice: a map-side join, tumbling 5-min
windows per route, sliding 15/5 windows per stop, a keyed bunching
detector, a per-window top-5 of tram routes. Eleven order-independent
checksums are asserted EQUAL between the lanes before anything is
timed; they match exactly at parallelism 1 and 4.

Per event one okay thread is 4.3x a Flink task and 2.2x four of them;
Flink's fixed cost is 0.55-0.70 s per job, its checkpointing 1.4%, and
enableObjectReuse is worth 1.47x at 2.4M events. The run also found
that a single-partition source feeding a filter at parallelism 4 is
rebalanced, so per-key order (per CHANNEL) does not survive it — the
bunching stage answered 451 instead of 913 until stage 1 was pinned.

docs/benchmarks.md §20, docs/modules/okay-flink.md, three history rows,
and three BACKLOG entries for what the run named and did not build.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0136mLYWEaek5BFNHQWmHYQ7